--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "back",
-  "version": "0.0.0",
+  "name": "lol-info-api",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm run build && node dist/bin/www",
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log,./.gitignore,./.prettierrc,./eslint.json --copy-files"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,6 +12,12 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^3.6.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "rimraf": "^3.0.2"
   }
 }
