--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run build && node dist/bin/www",
-    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log,./.gitignore,./.prettierrc,./eslint.json --copy-files"
+    "start": "node dist/index.js",
+    "build": "babel src --out-dir dist",
+    "restart": "rimraf dist && npm run build && npm run start",
+    "dev": "nodemon --exec npm run restart"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "mongodb": "^3.6.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.7",
     "rimraf": "^3.0.2"
   }
 }
